# ayagami

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  README.md
.github/scripts/: build_demo_web.sh
.github/workflows/: deploy_web_demo.yml
ayagami/: Cargo.toml
ayagami-demo/: Cargo.toml  Trunk.release.toml  index.html  inline-wasm.sh
ayagami-demo/src/: app.rs  lib.rs  main.rs
ayagami-render/: Cargo.toml  index.html
ayagami-render/src/: flat.wgsl  lib.rs  main.rs  renderer.rs  shader.wgsl  texture.rs
ayagami/src/: collections.rs  core.rs  lib.rs  main.rs  meta.rs
ayagami/src/driver/: deformer.rs  mod.rs
ayagami/src/file/: classes.rs  macros.rs  mod.rs  model.rs  parse.rs  types.rs
