[package]
name = "ayagami-render"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.24", features = [ "derive" ] }
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
wgpu = "29.0"
winit = { version = "0.30", features = ["android-native-activity"] }
ayagami = { path = "../ayagami" }
glam = { version = "0.33.1", features = ["bytemuck"] }
derive_more = { version = "2.1.1", features = ["debug", "display"] }
rayon = "1.12.0"
json = "0.12.4"

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.3", features = ["poll"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
gloo-utils = "0.3.0"
wgpu = { version = "29.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[bin]]
name = "demo_renderer"
path = "src/main.rs"
